@@ -2,6 +2,9 @@ mlr_2.1:
 - fix a bug when feature filtering resulted in a NoFeatureModel 
 - improve makeWeightedClassesWrapper: Hyperparams for class weighting are now supported, too.
 
+- new learners:
+-- regr.cforest
+
 mlr_2.0:
 - mlr now supports survival analysis models (experimental)
 - mlr now supports cost-sensitive learning with example-specific costs (experimental)
